--- a/Changes
+++ b/Changes
@@ -1,5 +1,5 @@
 Revision history for Bencher-Scenarios-PerinciSubValidateArgs
 
-0.001   2016-05-23 (PERLANCAR) (unreleased)
+0.001   2016-05-23 (PERLANCAR)
 
         - First release.
