--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Bencher-Scenarios-PerinciSubValidateArgs
 
+0.002   2016-05-24 (PERLANCAR)
+
+        - Add participant: Type::Tiny.
+
+        - Add benchmark notes.
+
+
 0.001   2016-05-23 (PERLANCAR)
 
         - First release.
