--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Bencher-Scenarios-PerinciSubValidateArgs
 
+0.004   2016-05-25 (PERLANCAR)
+
+	- Adjust to Perinci::Sub::ValidateArgs 0.006.
+
+
 0.003   2016-05-24 (PERLANCAR)
 
 	- Add participants: Perinci::Sub::Wrapper (PSW) and
