--- a/Changes
+++ b/Changes
@@ -1,9 +1,9 @@
-0.004   2016-05-25 (PERLANCAR)
+0.004   2016-05-25  Released-By: PERLANCAR
 
 	- Adjust to Perinci::Sub::ValidateArgs 0.006.
 
 
-0.003   2016-05-24 (PERLANCAR)
+0.003   2016-05-24  Released-By: PERLANCAR
 
 	- Add participants: Perinci::Sub::Wrapper (PSW) and
 	  Dist::Zilla::Plugin::Rinci::Wrap (DZPRW).
@@ -14,13 +14,13 @@
 	- Revise notes.
 
 
-0.002   2016-05-24 (PERLANCAR)
+0.002   2016-05-24  Released-By: PERLANCAR
 
         - Add participant: Type::Tiny.
 
         - Add benchmark notes.
 
 
-0.001   2016-05-23 (PERLANCAR)
+0.001   2016-05-23  Released-By: PERLANCAR
 
         - First release.
